# quick-timer

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
examples/: basic-example.rs
src/: lib.rs
