[package]
name = "quick-timer"
version = "0.1.0"
edition = "2024"
authors = ["yyxxryrx <yyxxryrx@outlook.com>"]
description = "A simple timer macro library"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/yyxxryrx/quick-timer"
homepage = "https://github.com/yyxxryrx/quick-timer"
keywords = ["timer"]
categories = ["development-tools"]

[features]
release_also = []

[[example]]
name = "basic-example"
path = "examples/basic-example.rs"

[dependencies]
